# sam-mcp

./: .env.example  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sam_mcp/: __init__.py  config.py  server.py
