[project]
name = "sam-mcp"
version = "0.1.0"
description = "MCP server for accessing SAM.gov APIs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Robert Sivilli", email = "robert.sivilli@gmail.com" }
]
keywords = ["mcp", "sam.gov", "government", "contracts", "procurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
sam-mcp = "sam_mcp.server:main_stdio"
sam-mcp-http = "sam_mcp.server:main_http"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
